--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "react-native-geouniq-sdk-beta1",
-  "version": "2.0.2",
-  "description": "",
+  "version": "2.0.8",
+  "description": "React native module for Geouniq SDK",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "geouniq",
+    "geolocation"
   ],
   "author": "",
   "license": "",
